update to remove underscores

--- a/test/flyway_governance_docker.conf
+++ b/test/flyway_governance_docker.conf
@@ -1,12 +1,12 @@
 flyway.url=jdbc:postgresql://localhost:5433/reference
-flyway.user=owner_governance
+flyway.user=ownergovernance
 flyway.password=mysecretpassword
 flyway.schemas=governance
-flyway.table=flyway_governance_history
+flyway.table=flywaygovernancehistory
 flyway.placeholders.schema=governance
-flyway.placeholders.authenticator_user=authenticator_governance
-flyway.placeholders.authenticator_password=auth1234
-flyway.placeholders.service_user=service_governance
-flyway.placeholders.readonly_user=readonly_governance
+flyway.placeholders.authenticatoruser=authenticatorgovernance
+flyway.placeholders.authenticatorpassword=auth1234
+flyway.placeholders.serviceuser=servicegovernance
+flyway.placeholders.readonlyuser=readonlygovernance
 flyway.target=13
 flyway.locations=filesystem:./../schemas/governance
