--- a/test/flyway_init_docker.conf
+++ b/test/flyway_init_docker.conf
@@ -3,15 +3,15 @@ flyway.user=postgres
 flyway.password=mysecretpassword
 flyway.schemas=public
 flyway.mixed=true
-flyway.placeholders.master_dbname=postgres
-flyway.placeholders.master_user=postgres
-flyway.placeholders.reference_dbname=reference
-flyway.placeholders.reference_ownername=owner_reference
-flyway.placeholders.reference_ownerpassword=mysecretpassword
-flyway.placeholders.reference_schema=reference
-flyway.placeholders.governance_dbname=governance
-flyway.placeholders.governance_ownername=owner_governance
-flyway.placeholders.governance_ownerpassword=mysecretpassword
-flyway.placeholders.governance_schema=governance
+flyway.placeholders.masterdbname=postgres
+flyway.placeholders.masteruser=postgres
+flyway.placeholders.referencedbname=reference
+flyway.placeholders.referenceownername=ownerreference
+flyway.placeholders.referenceownerpassword=mysecretpassword
+flyway.placeholders.referenceschema=reference
+flyway.placeholders.governancedbname=governance
+flyway.placeholders.governanceownername=ownergovernance
+flyway.placeholders.governanceownerpassword=mysecretpassword
+flyway.placeholders.governanceschema=governance
 flyway.target=2
 flyway.locations=filesystem:./../schemas/init
