--- a/test/flyway_reference_docker.conf
+++ b/test/flyway_reference_docker.conf
@@ -1,13 +1,13 @@
 flyway.url=jdbc:postgresql://localhost:5433/reference
-flyway.user=owner_reference
+flyway.user=ownerreference
 flyway.password=mysecretpassword
 flyway.schemas=reference
-flyway.table=flyway_reference_history
+flyway.table=flywayreferencehistory
 flyway.placeholders.schema=reference
-flyway.placeholders.authenticator_user=authenticator_reference
-flyway.placeholders.authenticator_password=auth1234
-flyway.placeholders.anon_user=web_anon
-flyway.placeholders.service_user=service_referance
-flyway.placeholders.readonly_user=readonly_referance
+flyway.placeholders.authenticatoruser=authenticatorreference
+flyway.placeholders.authenticatorpassword=auth1234
+flyway.placeholders.anonuser=webanon
+flyway.placeholders.serviceuser=servicereferance
+flyway.placeholders.readonlyuser=readonlyreferance
 flyway.target=8
 flyway.locations=filesystem:./../schemas/reference
