prepare keycloak for use with services and create docker-compose

--- a/test/flyway_governance_docker.conf
+++ b/test/flyway_governance_docker.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://localhost:5433/reference
+flyway.url=jdbc:postgresql://postgres_refdata:5432/reference
 flyway.user=ownergovernance
 flyway.password=mysecretpassword
 flyway.schemas=governance
@@ -6,7 +6,8 @@ flyway.table=flywaygovernancehistory
 flyway.placeholders.schema=governance
 flyway.placeholders.authenticatoruser=authenticatorgovernance
 flyway.placeholders.authenticatorpassword=auth1234
+flyway.placeholders.anonuser=webanongovernance
 flyway.placeholders.serviceuser=servicegovernance
 flyway.placeholders.readonlyuser=readonlygovernance
 flyway.target=13
-flyway.locations=filesystem:./../schemas/governance
+flyway.locations=filesystem:/source/schemas/governance
