--- a/test/flyway_init_docker.conf
+++ b/test/flyway_init_docker.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://localhost:5433/postgres
+flyway.url=jdbc:postgresql://postgres_refdata:5432/postgres
 flyway.user=postgres
 flyway.password=mysecretpassword
 flyway.schemas=public
@@ -14,4 +14,4 @@ flyway.placeholders.governanceownername=ownergovernance
 flyway.placeholders.governanceownerpassword=mysecretpassword
 flyway.placeholders.governanceschema=governance
 flyway.target=2
-flyway.locations=filesystem:./../schemas/init
+flyway.locations=filesystem:/source/schemas/init
