--- a/test/flyway_reference_docker.conf
+++ b/test/flyway_reference_docker.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://localhost:5433/reference
+flyway.url=jdbc:postgresql://postgres_refdata:5432/reference
 flyway.user=ownerreference
 flyway.password=mysecretpassword
 flyway.schemas=reference
@@ -9,5 +9,5 @@ flyway.placeholders.authenticatorpassword=auth1234
 flyway.placeholders.anonuser=webanon
 flyway.placeholders.serviceuser=servicereferance
 flyway.placeholders.readonlyuser=readonlyreferance
-flyway.target=8
-flyway.locations=filesystem:./../schemas/reference
+flyway.target=9
+flyway.locations=filesystem:/source/schemas/reference
