--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -5,3 +5,9 @@ branch: "branch.csv"
 gender: "gender.csv"
 sex: "sex.csv"
 title: "title.csv"
+ethnicity: "ethnicity.csv"
+marital: "marital.csv"
+religion: "religion.csv"
+country: "country.csv"
+nationality: "nationality.csv"
+currency: "currency.csv"
