--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -11,3 +11,26 @@ religion: "religion.csv"
 country: "country.csv"
 nationality: "nationality.csv"
 currency: "currency.csv"
+bffunctiontypes: "bffunctiontypes.csv"
+bflocationtype: "bflocationtype.csv"
+carrierlist: "carrierlist.csv"
+competence: "competence.csv"
+crewrole: "crewrole.csv"
+criminalrecordtype: "criminalrecordtype.csv"
+documenttype: "documenttype.csv"
+dogrole: "dogrole.csv"
+employmenttypes: "employmenttypes.csv"
+eventstatus: "eventstatus.csv"
+financialinstrument: "financialinstrument.csv"
+geographicregion: "geographicregion.csv"
+grade: "grade.csv"
+icao: "icao.csv"
+legtypes: "legtypes.csv"
+modeoftransport: "modeoftransport.csv"
+modetypes: "modetypes.csv"
+targetgroup: "targetgroup.csv"
+tdaapprovalstatus: "tdaapprovalstatus.csv"
+tdareasons: "tdareasons.csv"
+technicalprojectstatus: "technicalprojectstatus.csv"
+unlocode: "unlocode.csv"
+workarea: "workarea.csv"
