change environment for drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -25,50 +25,51 @@ pipeline:
   deploy_to_dev:
     image: quay.io/ukhomeofficedigital/refdata:$${DRONE_COMMIT_SHA}
     secrets:
-      - source: DEV_POSTGRES_DB
-        target: POSTGRES_DB
-      - source: DEV_POSTGRES_SERVER
-        target: POSTGRES_SERVER
-      - source: DEV_POSTGRES_PORT
-        target: POSTGRES_PORT
-      - source: DEV_FLYWAY_INIT_USER
-        target: FLYWAY_INIT_USER
-      - source: DEV_FLYWAY_INIT_PASSWORD
-        target: FLYWAY_INIT_PASSWORD
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA
-      - source: DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME
-        target: FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME
-      - source: DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD
-        target: FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD
-      - source: DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA
-        target: FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER
-      - source: DEV_FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER
-        target: FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER
-      - source: DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER
-        target: FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER
-      - source: DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD
-        target: FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD
-      - source: DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER
-        target: FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER
-      - source: DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER
-        target: FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER
-      - source: DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER
-        target: FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER
+      - DEV_POSTGRES_DB
+      - DEV_POSTGRES_SERVER
+      - DEV_POSTGRES_PORT
+      - DEV_FLYWAY_INIT_USER
+      - DEV_FLYWAY_INIT_PASSWORD
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA
+      - DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME
+      - DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD
+      - DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER
+      - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER
+      - DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER
+      - DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD
+      - DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER
+      - DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER
+      - DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER
+    environment:
+      - POSTGRES_DB=$${DEV_POSTGRES_DB}
+      - POSTGRES_SERVER=$${DEV_POSTGRES_SERVER}
+      - POSTGRES_PORT=$${DEV_POSTGRES_PORT}
+      - FLYWAY_INIT_USER=$${DEV_FLYWAY_INIT_USER}
+      - FLYWAY_INIT_PASSWORD=$${DEV_FLYWAY_INIT_PASSWORD}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA}
+      - FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME}
+      - FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD}
+      - FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER}
+      - FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER}
+      - FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER}
+      - FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD}
+      - FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
+      - FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
+      - FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
     when:
       branch: master
       event: [ push, deployment ]
