--- a/.drone.yml
+++ b/.drone.yml
@@ -70,6 +70,7 @@ pipeline:
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${DEV_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
+      - ./run.sh
     when:
       branch: master
       event: [ push, deployment ]
