--- a/.drone.yml
+++ b/.drone.yml
@@ -23,9 +23,12 @@ pipeline:
       event: [ push, deployment ]
 
   deploy_to_dev:
-    image: quay.io/ukhomeofficedigital/refdata:$${DRONE_COMMIT_SHA}
+    image: busybox
     commands:
-      - ./run.sh
+      - /bin/echo hello preprod
+    # image: quay.io/ukhomeofficedigital/refdata:$${DRONE_COMMIT_SHA}
+    # commands:
+    #   - ./run.sh
     when:
       branch: master
       event: [ push, deployment ]
