allow for secure postgres

--- a/.drone.yml
+++ b/.drone.yml
@@ -28,6 +28,7 @@ pipeline:
       - DEV_POSTGRES_DB
       - DEV_POSTGRES_SERVER
       - DEV_POSTGRES_PORT
+      - DEV_POSTGRES_OPTIONS
       - DEV_FLYWAY_INIT_USER
       - DEV_FLYWAY_INIT_PASSWORD
       - DEV_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME
@@ -52,6 +53,7 @@ pipeline:
       - export POSTGRES_DB=$${DEV_POSTGRES_DB}
       - export POSTGRES_SERVER=$${DEV_POSTGRES_SERVER}
       - export POSTGRES_PORT=$${DEV_POSTGRES_PORT}
+      - export POSTGRES_OPTIONS=$${DEV_POSTGRES_OPTIONS}
       - export FLYWAY_INIT_USER=$${DEV_FLYWAY_INIT_USER}
       - export FLYWAY_INIT_PASSWORD=$${DEV_FLYWAY_INIT_PASSWORD}
       - export FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME=$${DEV_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME}
