check image scanning

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,16 @@ pipeline:
     when:
       event: push
 
+  scan:
+    image: quay.io/ukhomeofficedigital/anchore-submission:latest
+    image_name: refdata:${DRONE_COMMIT_SHA}
+    tolarates: medium
+    # An optional whitelist (comman separated list of CVE's)
+    # whitelist: CVE_SOMENAME_1,CVE_SOMENAME_2
+    # An optional whitelist file containing a list of CSV relative to the repo path
+    # whitelist_file: <PATH>
+    fail_on_detection: true
+
   image_to_quay:
     image: quay.io/ukhomeofficedigital/drone-docker
     secrets:
