--- a/.drone.yml
+++ b/.drone.yml
@@ -7,15 +7,11 @@ pipeline:
     when:
       event: push
 
-  scan:
-    image: quay.io/ukhomeofficedigital/anchore-submission:latest
-    image_name: refdata:${DRONE_COMMIT_SHA}
-    tolarates: medium
-    # An optional whitelist (comman separated list of CVE's)
-    # whitelist: CVE_SOMENAME_1,CVE_SOMENAME_2
-    # An optional whitelist file containing a list of CSV relative to the repo path
-    # whitelist_file: <PATH>
-    fail_on_detection: false
+#  scan:
+#    image: quay.io/ukhomeofficedigital/anchore-submission:latest
+#    image_name: refdata:${DRONE_COMMIT_SHA}
+#    tolarates: medium
+#    fail_on_detection: false
 
   image_to_quay:
     image: quay.io/ukhomeofficedigital/drone-docker
@@ -87,14 +83,14 @@ pipeline:
       branch: master
       event: [ push, deployment ]
 
-  slack:
-    image: plugins/slack
-    settings:
-      webhook: https://hooks.slack.com/services/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
-      channel: refdata
-      template: >
-        {{#success build.status}}
-          build {{build.number}} succeeded. Good job.
-        {{else}}
-          build {{build.number}} failed. Fix me please.
-        {{/success}}
+#  slack:
+#    image: plugins/slack
+#    settings:
+#      webhook: https://hooks.slack.com/services/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
+#      channel: refdata
+#      template: >
+#        {{#success build.status}}
+#          build {{build.number}} succeeded. Good job.
+#        {{else}}
+#          build {{build.number}} failed. Fix me please.
+#        {{/success}}
