--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,16 @@ services:
     ports:
       - 5433:5432
 
-  flyway:
+  flyway_build:
     build: .
-    image: quay.io/ukhomeofficedigital/refdata
+    container_name: flyway_build
+    image: quay.io/ukhomeofficedigital/refdata:latest
+
+  flyway:
+    image: quay.io/ukhomeofficedigital/refdata:latest
     container_name: flyway
+    command: /mnt/docker/run.sh
+    working_dir: /mnt
     environment:
       POSTGRES_DB: postgres
       POSTGRES_SERVER: postgres_refdata
@@ -47,6 +53,10 @@ services:
       FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER: webanongovernance
       FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER: servicegovernance
       FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER: readonlygovernance
+    volumes:
+      - ${PWD}:/mnt
+    depends_on:
+      - flyway_build
 
   postgrest_reference:
     image: quay.io/ukhomeofficedigital/postgrest
@@ -62,7 +72,7 @@ services:
       PGRST_SERVER_PROXY_URI: "http://localhost:3000/"
       KEYCLOAK_URL: "http://keycloak:8080/keycloak"
       KEYCLOAK_REALM: refdata
-    command: /bin/getKeycloakKey.sh
+    command: /usr/local/bin/getKeycloakKey.sh
     depends_on:
       - postgres_refdata
 
@@ -80,7 +90,7 @@ services:
       PGRST_SERVER_PROXY_URI: "http://localhost:3000/"
       KEYCLOAK_URL: "http://keycloak:8080/keycloak"
       KEYCLOAK_REALM: refdata
-    command: /bin/getKeycloakKey.sh
+    command: /usr/local/bin/getKeycloakKey.sh
     depends_on:
       - postgres_refdata
 
