--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -34,3 +34,4 @@ tdareasons: "tdareasons.csv"
 technicalprojectstatus: "technicalprojectstatus.csv"
 unlocode: "unlocode.csv"
 workarea: "workarea.csv"
+securityclearance: "securityclearance.csv"
