update technical projects structure and docker compose run

--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -34,4 +34,4 @@ tdareasons: "tdareasons.csv"
 technicalprojectstatus: "technicalprojectstatus.csv"
 unlocode: "unlocode.csv"
 workarea: "workarea.csv"
-securityclearance: "securityclearance.csv"
+clearancetype: "clearancetype.csv"
