--- a/.drone.yml
+++ b/.drone.yml
@@ -51,15 +51,13 @@ pipeline:
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER="govanonuser"
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER="govserviceuser"
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER="govreadonlyuser"
-      - ls -la
       - git checkout -b test
       - git reset HEAD~1
-      - git log --oneline
       - /docker/run.sh
       - git checkout -f master
       - git reset HEAD
-      - git log --oneline
       - /docker/run.sh
+      - git tag testpassed
     when:
       event: [ push ]
 
