use drone commit

--- a/.drone.yml
+++ b/.drone.yml
@@ -51,27 +51,10 @@ pipeline:
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER="govanonuser"
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER="govserviceuser"
       - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER="govreadonlyuser"
-      - git checkout -b test
-      - git reset HEAD~1
-      - /docker/run.sh
       - git checkout -f master
-      - git reset HEAD
       - /docker/run.sh
-    when:
-      event: push
-
-  git_tag:
-    image: alpine/git
-    secrets: [ ssh_key ]
-    commands:
-      - mkdir /root/.ssh/ && echo "$SSH_KEY" > /root/.ssh/id_rsa && chmod 0600 /root/.ssh/id_rsa
-      - ssh-keyscan github.com >> /root/.ssh/known_hosts && chmod 600 /root/.ssh/known_hosts
-      - printf  "Host github.com\n   Hostname github.com\n   IdentityFile /root/.ssh/id_rsa\n" > /root/.ssh/config
-      - chmod 0600 /root/.ssh/config
-      - printf "[github]\n[user]\n user = git" > /root/.gitconfig
-      - git remote add tag-origin  git@github.com:UKHomeOffice/RefData.git
-      - git tag --force dataok
-      - git push --force tag-origin dataok
+      - git reset --hard $DRONE_COMMIT
+      - /docker/run.sh
     when:
       event: push
 
