--- a/.drone.yml
+++ b/.drone.yml
@@ -1,27 +1,5 @@
 pipeline:
 
-#  build:
-#    image: quay.io/ukhomeofficedigital/drone-docker
-#    commands:
-#      - docker build -t refdata:$${DRONE_COMMIT_SHA} .
-#    when:
-#      event: push
-#
-#  image_to_quay:
-#    image: quay.io/ukhomeofficedigital/drone-docker
-#    secrets:
-#      - DOCKER_USERNAME
-#      - DOCKER_PASSWORD
-#    registry: quay.io
-#    repo: quay.io/ukhomeofficedigital/refdata
-#    tags:
-#      - ${DRONE_BUILD_NUMBER}
-#      - ${DRONE_COMMIT_SHA}
-#      - latest
-#    when:
-#      branch: master
-#      event: [ push, deployment ]
-
   test:
     image: quay.io/ukhomeofficedigital/refdata:latest
     commands:
@@ -111,8 +89,61 @@ pipeline:
       - /docker/run.sh
     when:
       branch: master
-      event: [ push, deployment ]
+      event: [ push ]
 
+  deploy_to_prod:
+    image: quay.io/ukhomeofficedigital/refdata:latest
+    secrets:
+      - PROD_POSTGRES_DB
+      - PROD_POSTGRES_SERVER
+      - PROD_POSTGRES_PORT
+      - PROD_POSTGRES_OPTIONS
+      - PROD_FLYWAY_INIT_USER
+      - PROD_FLYWAY_INIT_PASSWORD
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA
+      - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME
+      - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD
+      - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER
+      - PROD_FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER
+      - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER
+      - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD
+      - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER
+      - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER
+      - PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER
+    commands:
+      - export POSTGRES_DB=$${PROD_POSTGRES_DB}
+      - export POSTGRES_SERVER=$${PROD_POSTGRES_SERVER}
+      - export POSTGRES_PORT=$${PROD_POSTGRES_PORT}
+      - export POSTGRES_OPTIONS=$${PROD_POSTGRES_OPTIONS}
+      - export FLYWAY_INIT_USER=$${PROD_FLYWAY_INIT_USER}
+      - export FLYWAY_INIT_PASSWORD=$${PROD_FLYWAY_INIT_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER=$${PROD_FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${PROD_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
+      - /docker/run.sh
+    when:
+      event: [ deployment ]
 
 services:
   database:
