--- a/.drone.yml
+++ b/.drone.yml
@@ -55,6 +55,9 @@ pipeline:
       - git reset --hard $DRONE_COMMIT
       - /docker/run.sh
     when:
+      branch:
+        exclude:
+        - master
       event: push
 
   deploy_to_dev:
