Update .drone.yml for Staging (re-signing commit)

--- a/.drone.yml
+++ b/.drone.yml
@@ -115,6 +115,61 @@ pipeline:
       branch: master
       event: push
 
+  deploy_to_staging:
+    image: quay.io/ukhomeofficedigital/refdata:latest
+    secrets:
+      - STAGING_POSTGRES_DB
+      - STAGING_POSTGRES_SERVER
+      - STAGING_POSTGRES_PORT
+      - STAGING_POSTGRES_OPTIONS
+      - STAGING_FLYWAY_INIT_USER
+      - STAGING_FLYWAY_INIT_PASSWORD
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA
+      - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME
+      - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD
+      - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER
+      - STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER
+      - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER
+      - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD
+      - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER
+      - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER
+      - STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER
+    commands:
+      - export POSTGRES_DB=$${STAGING_POSTGRES_DB}
+      - export POSTGRES_SERVER=$${STAGING_POSTGRES_SERVER}
+      - export POSTGRES_PORT=$${STAGING_POSTGRES_PORT}
+      - export POSTGRES_OPTIONS=$${STAGING_POSTGRES_OPTIONS}
+      - export FLYWAY_INIT_USER=$${STAGING_FLYWAY_INIT_USER}
+      - export FLYWAY_INIT_PASSWORD=$${STAGING_FLYWAY_INIT_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_DB_NAME}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_NAME}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_OWNER_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_SCHEMA}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_NAME}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_OWNER_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_SCHEMA}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_USER}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_AUTHENTICATOR_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_ANON_USER}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_SERVICE_USER}
+      - export FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER=$${STAGING_FLYWAY_PLACEHOLDERS_REFERENCE_READONLY_USER}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_USER}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_AUTHENTICATOR_PASSWORD}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_ANON_USER}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_SERVICE_USER}
+      - export FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER=$${STAGING_FLYWAY_PLACEHOLDERS_GOVERNANCE_READONLY_USER}
+      - /docker/run.sh
+    when:
+      event: deployment
+      environment: staging
+
   deploy_to_prod:
     image: quay.io/ukhomeofficedigital/refdata:latest
     secrets:
