updates for mode types

--- a/schemas/reference/bulkload/var.yaml
+++ b/schemas/reference/bulkload/var.yaml
@@ -27,8 +27,7 @@ grade: "grade.csv"
 icao: "icao.csv"
 legtypes: "legtypes.csv"
 modeoftransport: "modeoftransport.csv"
-modetypes: "modetypes.csv"
-targetgroup: "targetgroup.csv"
+bordercrossingmode: "bordercrossingmode.csv"
 tdaapprovalstatus: "tdaapprovalstatus.csv"
 tdareasons: "tdareasons.csv"
 technicalprojectstatus: "technicalprojectstatus.csv"
